add reason on pause/unpause
